--- a/extension/options.html
+++ b/extension/options.html
@@ -3,74 +3,88 @@
 <head>
   <meta charset="UTF-8">
   <title>PromptFence Settings</title>
+  <link rel="stylesheet" href="design-tokens.css">
   <style>
+    /**
+     * Options page styles using design tokens.
+     * Consistent with modal visual system.
+     */
     body {
-      font-family: system-ui, -apple-system, sans-serif;
-      padding: 20px;
+      font-family: var(--pf-font-family);
+      padding: var(--pf-space-5);
       max-width: 500px;
       margin: 0 auto;
+      background: var(--pf-bg);
+      color: var(--pf-text-primary);
     }
     h1 {
-      font-size: 20px;
-      margin-bottom: 8px;
+      font-size: var(--pf-font-size-xl);
+      font-weight: var(--pf-font-semibold);
+      margin-bottom: var(--pf-space-2);
     }
     .subtitle {
-      color: #6b7280;
-      font-size: 13px;
-      margin-bottom: 24px;
+      color: var(--pf-text-muted);
+      font-size: var(--pf-font-size-base);
+      margin-bottom: var(--pf-space-6);
     }
     .section {
-      margin-bottom: 24px;
+      margin-bottom: var(--pf-space-6);
     }
     .section-title {
-      font-size: 14px;
-      font-weight: 600;
-      margin-bottom: 12px;
-      color: #374151;
+      font-size: var(--pf-font-size-md);
+      font-weight: var(--pf-font-semibold);
+      margin-bottom: var(--pf-space-3);
+      color: var(--pf-text-primary);
     }
     .form-group {
-      margin-bottom: 16px;
+      margin-bottom: var(--pf-space-4);
     }
     label {
       display: block;
-      margin-bottom: 6px;
-      font-weight: 500;
-      font-size: 14px;
+      margin-bottom: var(--pf-space-2);
+      font-weight: var(--pf-font-medium);
+      font-size: var(--pf-font-size-md);
     }
     .hint {
-      font-size: 12px;
-      color: #6b7280;
-      margin-top: 4px;
+      font-size: var(--pf-font-size-sm);
+      color: var(--pf-text-muted);
+      margin-top: var(--pf-space-1);
     }
     select {
       width: 100%;
-      padding: 10px;
-      font-size: 14px;
-      border: 1px solid #d1d5db;
-      border-radius: 6px;
-      background: white;
+      padding: var(--pf-space-3);
+      font-size: var(--pf-font-size-md);
+      border: 1px solid var(--pf-border);
+      border-radius: var(--pf-radius-sm);
+      background: var(--pf-bg);
+      color: var(--pf-text-primary);
       cursor: pointer;
+    }
+    select:focus {
+      outline: 2px solid var(--pf-focus-ring);
+      outline-offset: var(--pf-focus-ring-offset);
     }
     .toggle-group {
       display: flex;
       flex-direction: column;
-      gap: 12px;
+      gap: var(--pf-space-3);
     }
     .toggle-row {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      padding: 10px 12px;
-      background: #f9fafb;
-      border-radius: 6px;
+      padding: var(--pf-space-3) var(--pf-space-4);
+      background: var(--pf-surface);
+      border-radius: var(--pf-radius-sm);
     }
     .toggle-label {
-      font-size: 14px;
+      font-size: var(--pf-font-size-md);
+      color: var(--pf-text-primary);
     }
     .toggle-hint {
-      font-size: 11px;
-      color: #6b7280;
-      margin-top: 2px;
+      font-size: var(--pf-font-size-xs);
+      color: var(--pf-text-muted);
+      margin-top: var(--pf-space-1);
     }
     .toggle {
       position: relative;
@@ -90,7 +104,7 @@
       left: 0;
       right: 0;
       bottom: 0;
-      background-color: #d1d5db;
+      background-color: var(--pf-border);
       transition: 0.2s;
       border-radius: 24px;
     }
@@ -106,118 +120,116 @@
       border-radius: 50%;
     }
     .toggle input:checked + .toggle-slider {
-      background-color: #2563eb;
+      background-color: var(--pf-accent);
     }
     .toggle input:checked + .toggle-slider:before {
       transform: translateX(20px);
     }
+    .toggle input:focus + .toggle-slider {
+      box-shadow: 0 0 0 2px var(--pf-focus-ring);
+    }
     .preset-description {
-      font-size: 12px;
-      color: #6b7280;
-      margin-top: 8px;
-      padding: 8px 12px;
-      background: #f3f4f6;
-      border-radius: 4px;
+      font-size: var(--pf-font-size-sm);
+      color: var(--pf-text-muted);
+      margin-top: var(--pf-space-2);
+      padding: var(--pf-space-2) var(--pf-space-3);
+      background: var(--pf-surface-muted);
+      border-radius: var(--pf-radius-sm);
+      line-height: var(--pf-line-height-normal);
     }
     button {
-      margin-top: 8px;
-      padding: 10px 20px;
-      font-size: 14px;
-      background: #2563eb;
+      margin-top: var(--pf-space-2);
+      padding: var(--pf-space-3) var(--pf-space-5);
+      font-size: var(--pf-font-size-md);
+      background: var(--pf-accent);
       color: white;
       border: none;
-      border-radius: 6px;
+      border-radius: var(--pf-radius-sm);
       cursor: pointer;
-      font-weight: 500;
+      font-weight: var(--pf-font-medium);
+      transition: background-color 0.15s;
     }
     button:hover {
-      background: #1d4ed8;
+      background: var(--pf-accent-hover);
+    }
+    button:focus {
+      outline: 2px solid var(--pf-focus-ring);
+      outline-offset: var(--pf-focus-ring-offset);
     }
     #status {
-      margin-top: 12px;
-      font-size: 14px;
-      color: #22c55e;
+      margin-top: var(--pf-space-3);
+      font-size: var(--pf-font-size-md);
+      color: var(--pf-success);
     }
     #status.error {
-      color: #ef4444;
+      color: var(--pf-finance-text);
     }
     .rules-preview {
-      margin-top: 16px;
-      padding: 12px;
-      background: #f9fafb;
-      border: 1px solid #e5e7eb;
-      border-radius: 6px;
+      margin-top: var(--pf-space-4);
+      padding: var(--pf-space-3);
+      background: var(--pf-surface);
+      border: 1px solid var(--pf-border);
+      border-radius: var(--pf-radius-sm);
     }
     .rules-preview h4 {
-      font-size: 13px;
-      margin: 0 0 8px 0;
-      color: #374151;
+      font-size: var(--pf-font-size-base);
+      font-weight: var(--pf-font-semibold);
+      margin: 0 0 var(--pf-space-2) 0;
+      color: var(--pf-text-primary);
     }
     .rule-item {
       display: flex;
       justify-content: space-between;
-      font-size: 12px;
-      padding: 4px 0;
-      border-bottom: 1px solid #e5e7eb;
+      font-size: var(--pf-font-size-sm);
+      padding: var(--pf-space-1) 0;
+      border-bottom: 1px solid var(--pf-border);
     }
     .rule-item:last-child {
       border-bottom: none;
     }
     .rule-action {
-      font-weight: 500;
+      font-weight: var(--pf-font-medium);
     }
+    /* Block uses neutral color, not aggressive red */
     .rule-action.block {
-      color: #dc2626;
+      color: var(--pf-block-text);
     }
     .rule-action.warn {
-      color: #d97706;
+      color: var(--pf-warn-text);
     }
     .rule-action.allow {
-      color: #16a34a;
+      color: var(--pf-success);
     }
     .divider {
       height: 1px;
-      background: #e5e7eb;
-      margin: 24px 0;
+      background: var(--pf-border);
+      margin: var(--pf-space-6) 0;
     }
-    @media (prefers-color-scheme: dark) {
-      body {
-        background: #1f2937;
-        color: #f9fafb;
-      }
-      select {
-        background: #374151;
-        border-color: #4b5563;
-        color: #f9fafb;
-      }
-      .hint, .subtitle {
-        color: #9ca3af;
-      }
-      .toggle-row, .rules-preview {
-        background: #374151;
-        border-color: #4b5563;
-      }
-      .toggle-slider {
-        background-color: #4b5563;
-      }
-      .preset-description {
-        background: #374151;
-      }
-      .section-title, .rules-preview h4 {
-        color: #e5e7eb;
-      }
-      .rule-item {
-        border-color: #4b5563;
-      }
-      .divider {
-        background: #4b5563;
-      }
+    .learn-more {
+      margin-bottom: var(--pf-space-5);
+      padding: var(--pf-space-3) var(--pf-space-4);
+      background: var(--pf-accent-light);
+      border-radius: var(--pf-radius-sm);
+      border: 1px solid var(--pf-accent-border);
+    }
+    .learn-more a {
+      font-size: var(--pf-font-size-md);
+      color: var(--pf-accent);
+      text-decoration: none;
+      font-weight: var(--pf-font-medium);
+    }
+    .learn-more a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
   <h1>PromptFence Settings</h1>
   <p class="subtitle">Local Mode — No server required, all detection runs in your browser</p>
+
+  <div class="learn-more">
+    <a href="welcome.html" target="_blank">Learn how PromptFence works →</a>
+  </div>
 
   <div class="section">
     <div class="section-title">Protection Preset</div>
@@ -226,7 +238,7 @@
         <option value="personal">Personal Safety (Recommended)</option>
         <option value="finance">Finance</option>
         <option value="health">Health</option>
-        <option value="workplace">Workplace/HR</option>
+        <option value="workplace">Workplace</option>
         <option value="developer">Developer</option>
       </select>
       <div id="presetDescription" class="preset-description"></div>
