--- a/extension/privacy.html
+++ b/extension/privacy.html
@@ -139,7 +139,7 @@
     <a href="welcome.html" class="back-link">&larr; Back to PromptFence</a>
 
     <h1>Privacy Policy</h1>
-    <p class="updated"><strong>Last updated:</strong> February 2025</p>
+    <p class="updated"><strong>Last updated:</strong> February 2026</p>
 
     <div class="summary">
       <p>PromptFence (Personal) processes all data locally in your browser. No data is collected, transmitted, or stored externally.</p>
@@ -197,7 +197,7 @@
     <p>We will update this policy if we make changes to how the extension handles data. The "Last updated" date at the top will reflect when changes were made.</p>
 
     <h2>Contact</h2>
-    <p>For questions about this privacy policy, please open an issue on our GitHub repository.</p>
+    <p>For questions about this privacy policy, please email emeka.onyenwe@gmail.com or open an issue on our GitHub repository.</p>
   </div>
 </body>
 </html>
